[project]
name = "tk_comfyui_view_and_light"
description = "TK View and Light: A ComfyUI node for 3D camera and lighting control"
version = "0.4.1"
license = { text = "MIT" }
readme = "README.md"

[project.urls]
Repository = "https://github.com/tack1031/tk_comfyui_view_and_light"

[tool.comfy]
PublisherId = "tack1031"
DisplayName = "TK View & Light"
Icon = ""
